[package]
name = "pacer"
version = "0.1.0"
authors = ["Bruno Flores <bruno@brunoflores.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

# alloc-cortex-m = "0.4.1"

# cortex-m = "0.6.0"
# cortex-m-rt = "0.6.10"
# cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"

# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[[bin]]
name = "pacer"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
